# ChangeLog for dev-perl/XML-FeedPP
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*XML-FeedPP-0.41.ebuild

  27 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +XML-FeedPP-0.41.ebuild:
  bump

*XML-FeedPP-0.40.ebuild

  20 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +XML-FeedPP-0.40.ebuild, +metadata.xml:
  initial commit
