@@ -1,6 +1,4 @@
-DIST XML-FeedPP-0.40.tar.gz 41698 RMD160 20fd4acae12b79c613016462b90c553e1a080f77 SHA1 67a6649b845fb7282060112e5274e902f0626445 SHA256 105aeccca7e4c2248161ce5b1455d57853e0ce84d1260bfee26a9f8d158cac6b
 DIST XML-FeedPP-0.41.tar.gz 40607 RMD160 4c6af03c844deae141f88d374e9aef4188dfb622 SHA1 75eab5387e2c739b99cfc53637a2b28a4092dce4 SHA256 217c5440fdc6fbe8865d9546930a36585f4c3b02cb1bf97adfd5e7b094ec7212
-EBUILD XML-FeedPP-0.40.ebuild 355 RMD160 5587117b12c4eb1d908f620ab36f5bde822c09a3 SHA1 58fbe389cc90eecc3a326e9d21ef13a30e999b93 SHA256 40ad3357762cd9b3034a1438daec9de6a5471c38a0e8341d095dc8a5442d34c3
 EBUILD XML-FeedPP-0.41.ebuild 355 RMD160 5587117b12c4eb1d908f620ab36f5bde822c09a3 SHA1 58fbe389cc90eecc3a326e9d21ef13a30e999b93 SHA256 40ad3357762cd9b3034a1438daec9de6a5471c38a0e8341d095dc8a5442d34c3
-MISC ChangeLog 371 RMD160 3d2061126e72886bb399a7caabd598fbcba5501c SHA1 b9a2e941a30998b05f21edd4d3d30e48d3880358 SHA256 6fc5ccda0917cc1ea603232072ed02f14fec67f22e408125c367c9140b2298db
+MISC ChangeLog 463 RMD160 fdde4574e6a8845e1b5a092528a00de31c8b891a SHA1 db8d4f3ae2464bef4912d4c820bb617397a10409 SHA256 f6c0f58c93bf8092f89af484578984ecea735d6c6d55233b6387565627163750
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
