@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -XML-FeedPP-0.40.ebuild:
+  drop old
+
 *XML-FeedPP-0.41.ebuild
 
   27 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
